# multi_search_agent

./: .env.example  .gitignore  pyproject.toml  readme.md
data/: 【中央】“十四五”时期政采成效显著  【中央】发展改革委要求加快推广远程异地评标  【中央】国采中心：开创集采事业发展新局面  【四川】出台稳外资行动实施方案  【四川】明确采购人主体责任  【四川】深化政采制度改革  【河南】三门峡市政府集中采购中心成立五周年 成效斐然  【河南】力推采购人主体责任有效落实  【河南】长葛：建立全流程线上诚信评价体系  【辽宁】三部门联动整治四类问题 多措并举优化营商环境  【辽宁】支持民企参与政府采购  【辽宁】规范网上商城采购管理
doc/: data_init.md  geo_region.md  kb_partition.md  langchain_base.md  pipeline_core.md  rag_simple.md
src/: __init__.py  app.py  config.py
src/data_init/: __init__.py  cli.py  initializer.py
src/geo/: __init__.py  region.py
src/llm/: embeddings.py  tongyi.py
src/pipeline/: chain.py  core.py  format.py  prompt.py  summary.py
src/rag/: partition.py  simple.py
src/utils/: log.py
test/: test_app.py  test_data_init.py  test_partition.py  test_region.py
